# storage_lib

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  nose2.cfg  pyproject.toml
docs/src/: conf.py  index.rst
scripts/: build.py  doc.py  export_dependencies.py  outdated_dependencies.py  test_changelog.py  test_linter.py  test_tests.py  test_typing.py
src/storage_lib/: __init__.py
src/storage_lib/entities/: __init__.py  disk.py  partition.py
src/storage_lib/managers/: __init__.py  disk_manager.py
src/storage_lib/managers/getters/: __init__.py  disk_getter.py  partition_getter.py
src/storage_lib/utils/: __init__.py  size_utils.py
tests/: __init__.py
tests/mock_storage_lib/: __init__.py  mock_disk_manager.py  mock_partition_manager.py
tests/tests_storage_lib/: __init__.py
tests/tests_storage_lib/managers/: __init__.py  test_disk_manager.py
tests/tests_storage_lib/managers/getters/: __init__.py  test_disk_getter.py  test_partition_getter.py
tests/tests_storage_lib/utils/: __init__.py  test_size_utils.py
